--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "gsap": "^3.13.0",
     "next": "15.3.4",
+    "opentype.js": "^1.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "svg-path-properties": "^1.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
