Finished text animation

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mother_card",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
