--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "next": "15.3.4",
     "opentype.js": "^1.3.4",
     "react": "^19.0.0",
